fix code wrapping issue

--- a/APSIM.Documentation/Resources/docs.css
+++ b/APSIM.Documentation/Resources/docs.css
@@ -53,3 +53,8 @@ tr:nth-child(even) {
     padding-top: 20px;
     margin-bottom: 0px;
 }
+
+/* Required to stop non-wrapping code tags. */
+pre{
+    white-space: pre-wrap;
+}
